Support for Java 1.4